--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ section li {
 #acoes-sociais .acoes-text h2 {
   font-size: 2rem;
   color: var(--dark);
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 #acoes-sociais .acoes-text p {
